BUGFIX corrected the sidebar-spacing

--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -8,13 +8,8 @@
 html body .sidebarContentCard{
 	position: relative;
 	overflow: visible;
-	border-bottom-right-radius: 0;
-	border-bottom-left-radius: 0;
-	flex-grow: 1;
 
-	padding-bottom: 64px;
-
-	/*transition: background-color var(--transition-time) var(--timing-function);*/
+	margin: 0 16px 80px 16px;
 }
 
 
